# UUID-Generator

./: .gitignore  Cargo.toml  LICENSE  README.md
bindings/c/: README.md  example.c  uuid_generator.h
bindings/csharp/: Example.cs  README.md  UuidGenerator.cs  UuidGenerator.csproj
bindings/go/: README.md  main.go
bindings/java/: README.md  pom.xml
bindings/java/src/main/java/com/uuidgenerator/: Example.java  Uuid.java  UuidException.java  UuidGenerator.java
bindings/nodejs/: README.md  example.js  index.js  package.json
bindings/python/: README.md  example.py  uuid_generator.py
examples/: basic_usage.rs  show_process.rs
go-bindings/: go.mod  main.go
src/: ffi.rs  jni.rs  lib.rs
